# nsbtools-docs-draft

./: .gitignore  .readthedocs.yaml  README.md  README.rst  calc_modes.ipynb  pyproject.toml
docs/: conf.py  index.rst  modules.rst  requirements.txt  tutorials.rst  usage.rst
docs/_static/: custom.css
docs/tutorials/: calc_modes.ipynb
nsbtools/: basis.py  eigen.py  nulls.py  plotting.py  utils.py  validation.py
nsbtools/data/: emodes_human-lh-fsLR-4k_midthickness.npy  evals_human-lh-fsLR-4k_midthickness.npy  sp-human_space-fsLR_den-32k_hemi-L_desc-medmask.npy  sp-human_space-fsLR_den-32k_hemi-R_desc-medmask.npy  sp-human_space-fsLR_den-4k_hemi-R_desc-medmask.npy  sp-macaque_space-fsLR_den-10k_hemi-L_desc-medmask.npy  sp-marmoset_space-fsLR_den-10k_hemi-L_desc-medmask.npy  sp-marmoset_tpl-fsLR_den-10k_hemi-L_midthickness.surf.gii
